# ThrottledAPI

./: .gitignore  .pre-commit-config.yaml  .pylint.cfg  CHANGELOG.md  LICENSE  Makefile  README.md  VERSION  pyproject.toml  sonar-project.properties
.github/workflows/: codeql-analysis.yml  contribute.yml  publish.yml  python-publish.yml  test.yml  tox.yml
design/: hit.puml
tests/: conftest.py  models_test.py  utils_for_test.py  utils_test.py
tests/acceptance/: acceptance_test.py
tests/acceptance/steps/: fastapi.py
tests/fastapi/: fastapi_limiter_test.py  host_based_test.py  middleware_limiter_test.py
tests/features/: fastapi_limiter.feature
tests/limiter/: decorator_test.py  fixed_window_test.py  moving_window_test.py
tests/unit/: decorator_test.py  fastapi_utils_test.py  moving_window_test.py
throttled/: __init__.py  exceptions.py  limiter.py  models.py  strategies.py
throttled/fastapi/: __init__.py  base.py  builder.py  handler.py  limiters.py  utils.py
throttled/fastapi/limiters/: __init__.py  base.py  host.py  total.py
throttled/starlette/: __init__.py  builder.py
throttled/starlette/limiters/: base.py
throttled/storage/: __init__.py  _abstract.py  _duration.py  _duration_funcs.py  abstract.py  base.py  memory.py  redis.py
throttled/storage/memory/: __init__.py  factory.py  storage.py  window.py
throttled/strategy/: __init__.py  abstract.py  base.py  fixed_window.py  moving_window.py
